Added and modified sections

--- a/index.html
+++ b/index.html
@@ -123,8 +123,57 @@
             </div>
         </section>
 
-        <section>
-            
+        <section id="quality">
+            <div class="container container__quality">
+                <div class="row row__quality">
+                    <div class="quality__description--wrapper">
+                        <span class="section__top-title">QUALITY WORK</span>
+                        <h2 class="section__title">Designed & Developed by <span class="purple">Professionals.</span></h2>
+                        <p class="section__para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                        <button class="btn quality__description--button">Learn More</button>
+                    </div>
+                    <figure class="quality__img--wrapper">
+                        <img class="quality__img" src="./assets/Landing Page Website Image.png" alt="">
+                    </figure>
+                </div>
+            </div>
+        </section>
+
+        <section id="steps">
+            <div class="container container__steps">
+                <div class="row row__quality">
+                    <figure class="steps__img--wrapper">
+                        <img src="./assets//Laptop.png" alt="" class="steps__img">
+                    </figure>
+                    <div class="steps__description--wrapper">
+                        <span class="section__top-title">STEPS</span>
+                        <h2 class="section__title">Easy to <span class="purple">Get Started.</span></h2>
+                        <ul class="steps__list">
+                            <li class="step">
+                                <div class="step__number">01</div>
+                                <div class="step__content">
+                                    <h5 class="step__content--title">Register</h5>
+                                    <p class="step__content--para">Create an account with us using Google or Facebook.</p>
+                                </div>
+                            </li>
+                            <li class="step">
+                                <div class="step__number">02</div>
+                                <div class="step__content">
+                                    <h5 class="step__content--title">Download</h5>
+                                    <p class="step__content--para">Browse and Download the template that you like from the marketplace.</p>
+                                </div>
+                            </li>
+                            <li class="step">
+                                <div class="step__number">03</div>
+                                <div class="step__content">
+                                    <h5 class="step__content--title">Run</h5>
+                                    <p class="step__content--para">Follow the instructions to setup and customize the template to your needs.</p>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </section>
 
 
