Last sections added

--- a/index.html
+++ b/index.html
@@ -318,19 +318,75 @@
 
       <section id="pricing">
         <div class="container">
-          <div class="row">
+          <div class="row row__pricing">
             <span class="section__top-title">PRICING</span>
             <h2 class="section__title">
               Reasonable & Flexible <span class="purple">Plans.</span>
             </h2>
-            <p class="section__para">
+            <p class="section__para section__para--pricing">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua.
             </p>
           </div>
-          <div class="pricing__list--wrapper">
-            <div class="pricing__list">
-
+          <div class="pricing-tier__list--wrapper">
+            <div class="pricing-tier">
+                <div class="pricing-tier__top-decoration--personal"></div>
+                <div class="pricing-tier__top">
+                    <span class="pricing-tier__name">PERSONAL</span>
+                    <span class="pricing-tier__price">$17.99</span>
+                    <span class="pricing-tier__duration">MONTHLY</span>
+                </div>
+                <hr>
+                <div class="pricing-tier__middle">
+                    <span class="pricing-tier__business-size">For Individuals</span>
+                    <span class="pricing-tier__feature">30 Templates</span>
+                    <span class="pricing-tier__feature">7 Landing Pages</span>
+                    <span class="pricing-tier__feature">12 Internal Pages</span>
+                    <span class="pricing-tier__feature">Basic Assistance</span>
+                </div>
+                <hr>
+                <div class="pricing-tier__bottom">
+                    <button class="pricing-tier__button button__personal">BUY NOW</button>
+                </div>
+            </div>
+            <div class="pricing-tier pricing-tier__business">
+                <div class="pricing-tier__top">
+                    <span class="pricing-tier__name">BUSINESS</span>
+                    <span class="pricing-tier__price">$37.99</span>
+                    <span class="pricing-tier__duration white">MONTHLY</span>
+                </div>
+                <hr>
+                <div class="pricing-tier__middle">
+                    <span class="pricing-tier__business-size">For Small Businesses</span>
+                    <span class="pricing-tier__feature white">60 Templates</span>
+                    <span class="pricing-tier__feature white">15 Landing Pages</span>
+                    <span class="pricing-tier__feature white">22 Internal Pages</span>
+                    <span class="pricing-tier__feature white">Priority Assistance</span>
+                </div>
+                <hr>
+                <div class="pricing-tier__bottom">
+                    <button class="pricing-tier__button button__business">BUY NOW</button>
+                </div>
+            </div>
+            <div class="pricing-tier">
+                <div class="pricing-tier__top">
+                    <div class="pricing-tier__top-decoration--enterprise"></div>
+                    <span class="pricing-tier__name">ENTERPRISE</span>
+                    <span class="pricing-tier__price">$57.99</span>
+                    <span class="pricing-tier__duration">MONTHLY</span>
+                </div>
+                <hr>
+                <div class="pricing-tier__middle">
+                    <span class="pricing-tier__business-size">For Large Companies</span>
+                    <span class="pricing-tier__feature">90 Templates</span>
+                    <span class="pricing-tier__feature">27 Landing Pages</span>
+                    <span class="pricing-tier__feature">37 Internal Pages</span>
+                    <span class="pricing-tier__feature">Personal Assistance</span>
+                </div>
+                <hr>
+                <div class="pricing-tier__bottom">
+                    <button class="pricing-tier__button button__enterprise">BUY NOW</button>
+                </div>
             </div>
 
           </div>
@@ -339,29 +395,54 @@
 
       <section id="testimonials">
         <div class="container">
-            <div class="row">
-                <span class="section__top-title">TESTIMONIALS</span>
-                <h2 class="section__title">Our Clients <span class="purple">Love Us.</span></h2>
-                <p class="section__para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua enim ad minim veniam.</p>
-                <div class="ratings">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
+            <div class="row row__testimonials">
+                <figure class="testimonials__img--wrapper">
+                    <img class="testimonials__img" src="./assets/Undraw Testimonials Section Image.svg" alt="">
+                </figure>
+                <div class="testimonials__content--wrapper">
+                    <span class="section__top-title">TESTIMONIALS</span>
+                    <h2 class="section__title">Our Clients <span class="purple">Love Us.</span></h2>
+                    <p class="section__para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua enim ad minim veniam.</p>
+                    <div class="ratings">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <h3 class="testimonial__title">Amazing User Experience</h3>
+                    <p class="testimonial__para">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti consequuntur repellat nam quidem architecto, accusantium temporibus alias, ullam, libero nobis molestias. Necessitatibus quaerat possimus natus culpa ea similique harum iusto officiis nihil officia modi maxime inventore sapiente iste facilis, quisquam ipsum minus sit labore nemo totam nesciunt blanditiis error molestiae.</p>
+                    <div class="testimonial__user--wrapper">
+                        <figure class="user__img--wrapper">
+                            <img class="user__img" src="./assets/Delos Director Picture.avif" alt="">
+                        </figure>
+                        <div class="user__content--wrapper">
+                            <div class="user__name">Charlotte Hale</div>
+                            <div class="user__title">Director, Delos Inc.</div>
+                        </div>
+                    </div>
                 </div>
-                <h3 class="testimonial__title">Amazing User Experience</h3>
-                <p class="testimonial__para">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti consequuntur repellat nam quidem architecto, accusantium temporibus alias, ullam, libero nobis molestias. Necessitatibus quaerat possimus natus culpa ea similique harum iusto officiis nihil officia modi maxime inventore sapiente iste facilis, quisquam ipsum minus sit labore nemo totam nesciunt blanditiis error molestiae.</p>
             </div>
         </div>
       </section>
 
       <section id="questions">
         <div class="container">
-            <div class="row">
-                <span class="section__top-title">FAQS</span>
-                <h2 class="section__title">You have <span class="purple">Questions ?</span></h2>
-                <p class="section__para">And we have got answerts to all of them. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <div class="row row__questions">
+                <div class="questions__section--wrapper">
+                    <span class="section__top-title">FAQS</span>
+                    <h2 class="section__title">You have <span class="purple">Questions ?</span></h2>
+                    <p class="section__para">And we have got answerts to all of them. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
+                <div class="questions__box--wrapper">
+                    <div class="questions__box">
+                        <h5 class="questions__box--title">Developers all over the world are happily using Treact.</h5>
+                    </div>
+                    <div class="questions__buttons">
+                        <button class="questions__button--start">Get Starter</button>
+                        <button class="questions__button--contact">Contact Us</button>
+                    </div>
+                </div>
             </div>
         </div>
       </section>
@@ -369,8 +450,64 @@
     </main>
 
     <footer>
+        <div class="footer__container">
+            <div class="footer__row">
+                <div class="footer__list--wrapper">
+                    <div class="footer__list">
+                        <h5 class="footer__list--name">MAIN</h5>
+                        <a class="footer__list--anchor" href="">Blog</a>
+                        <a class="footer__list--anchor" href="">FAQs</a>
+                        <a class="footer__list--anchor" href="">Suport</a>
+                        <a class="footer__list--anchor" href="">About Us</a>
+                    </div>
+                    <div class="footer__list">
+                        <h5 class="footer__list--name">PRODUCT</h5>
+                        <a class="footer__list--anchor" href="">Log In</a>
+                        <a class="footer__list--anchor" href="">Personal</a>
+                        <a class="footer__list--anchor" href="">Business</a>
+                        <a class="footer__list--anchor" href="">Team</a>
+                    </div>
+                    <div class="footer__list">
+                        <h5 class="footer__list--name">PRESS</h5>
+                        <a class="footer__list--anchor" href="">Logos</a>
+                        <a class="footer__list--anchor" href="">Events</a>
+                        <a class="footer__list--anchor" href="">Stories</a>
+                        <a class="footer__list--anchor" href="">Office</a>
+                    </div>
+                    <div class="footer__list">
+                        <h5 class="footer__list--name">TEAM</h5>
+                        <a class="footer__list--anchor" href="">Career</a>
+                        <a class="footer__list--anchor" href="">Founders</a>
+                        <a class="footer__list--anchor" href="">Culture</a>
+                        <a class="footer__list--anchor" href="">Onboarding</a>
+                    </div>
+                    <div class="footer__list">
+                        <h5 class="footer__list--name">LEGAL</h5>
+                        <a class="footer__list--anchor" href="">GDPR</a>
+                        <a class="footer__list--anchor" href="">Privacy Policy</a>
+                        <a class="footer__list--anchor" href="">Terms of Service</a>
+                        <a class="footer__list--anchor" href="">Disclaimer</a>
+                    </div>
 
-        
+                </div>
+                <hr>
+                <div class="footer__copyright--wrapper">
+                    <div class="footer__logo--wrapper">
+                        <img class="footer__logo--img" src="./assets/Logo Footer.svg" alt="">
+                        <h5 class="footer__logo--title">Treact Inc.</h5>
+                    </div>
+                    <div class="footer__copyright">
+                        &copy; 2023 Treact Inc. All Rights Reserved.
+                    </div>
+                    <div class="footer__socials">
+                        <a href="https://www.facebook.com"><i class="fab fa-facebook ji"></i></a>
+                        <a href="https://www.twitter.com"><i class="fab fa-twitter"></i></a>
+                        <a href="https://www.youtube.com"><i class="fab fa-youtube"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </footer>
+
   </body>
 </html>
