Modified edited website

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </title>
     <link rel="stylesheet" href="style.css" />
     <script
-      class="https://kit.fontawesome.com/c8e4d183c2.js"
+      src="https://kit.fontawesome.com/c8e4d183c2.js"
       crossorigin="anonymous"
     ></script>
   </head>
@@ -20,16 +20,16 @@
           <a href="#" class="nav__logo--anchor">Treact</a>
         </div>
         <ul class="nav__links">
-          <li><a href="#" class="nav__link nav__link--regular">About</a></li>
-          <li><a href="#" class="nav__link nav__link--regular">Blog</a></li>
-          <li><a href="#" class="nav__link nav__link--regular">Pricing</a></li>
-          <li><a href="#" class="nav__link nav__link--regular">Contact</a></li>
+          <li><a href="" class="nav__link link__hover-effect not__allowed">About</a></li>
+          <li><a href="" class="nav__link link__hover-effect not__allowed">Blog</a></li>
+          <li><a href="#pricing" class="nav__link link__hover-effect">Pricing</a></li>
+          <li><a href="" class="nav__link link__hover-effect not__allowed">Contact</a></li>
           <li>
-            <a href="#" class="nav__link nav__link--regular nav__link--login"
+            <a href="" class="nav__link link__hover-effect nav__link--login not__allowed"
               >Login</a
             >
           </li>
-          <li><a href="#" class="nav__link nav__link--sign-up">Sign Up</a></li>
+          <li><a href="" class="nav__link nav__link--sign-up not__allowed">Sign Up</a></li>
         </ul>
       </nav>
       <header>
@@ -47,7 +47,7 @@
               type="email"
               placeholder="  Your E-mail Address"
             />
-            <button class="btn header__description--input-button">
+            <button class="btn header__description--input-button not__allowed">
               Get Started
             </button>
           </div>
@@ -205,7 +205,7 @@
                 enim ad minim veniam, quis nostrud exercitation ullamco laboris
                 nisi ut aliquip ex ea commodo consequat.
               </p>
-              <button class="btn quality__description--button">
+              <button class="btn quality__description--button not__allowed">
                 Learn More
               </button>
             </div>
@@ -284,7 +284,9 @@
               <div class="values__list--wrapper">
                 <div class="values__principles--wrapper">
                   <div class="values__title--wrapper">
-                    <i class="fa fa-usd values__icon--affordable"></i>
+                    <div class="icon__wrapper--affordable">
+                        <i class="fa fa-usd values__icon--affordable"></i>
+                    </div>
                     <h3 class="values__principles--title">Affordable</h3>
                   </div>
                   <p class="values__principles--para">
@@ -294,7 +296,9 @@
                 </div>
                 <div class="values__principles--wrapper">
                   <div class="values__title--wrapper">
-                    <i class="fa fa-suitcase values__icon--professionalism"></i>
+                    <div class="icon__wrapper--professionalism">
+                        <i class="fa fa-suitcase values__icon--professionalism"></i>
+                    </div>
                     <h3 class="values__principles--title">Professionalism</h3>
                   </div>
                   <p class="values__principles--para">
@@ -303,7 +307,7 @@
                   </p>
                 </div>
               </div>
-              <button class="btn">Learn More</button>
+              <button class="btn not__allowed">Learn More</button>
             </div>
             <div class="values__figure--wrapper">
               <img
@@ -346,7 +350,7 @@
                 </div>
                 <hr>
                 <div class="pricing-tier__bottom">
-                    <button class="pricing-tier__button button__personal">BUY NOW</button>
+                    <button class="pricing-tier__button button__personal not__allowed">BUY NOW</button>
                 </div>
             </div>
             <div class="pricing-tier pricing-tier__business">
@@ -365,7 +369,7 @@
                 </div>
                 <hr>
                 <div class="pricing-tier__bottom">
-                    <button class="pricing-tier__button button__business">BUY NOW</button>
+                    <button class="pricing-tier__button button__business not__allowed">BUY NOW</button>
                 </div>
             </div>
             <div class="pricing-tier">
@@ -385,7 +389,7 @@
                 </div>
                 <hr>
                 <div class="pricing-tier__bottom">
-                    <button class="pricing-tier__button button__enterprise">BUY NOW</button>
+                    <button class="pricing-tier__button button__enterprise not__allowed">BUY NOW</button>
                 </div>
             </div>
 
@@ -439,8 +443,8 @@
                         <h5 class="questions__box--title">Developers all over the world are happily using Treact.</h5>
                     </div>
                     <div class="questions__buttons">
-                        <button class="questions__button--start">Get Starter</button>
-                        <button class="questions__button--contact">Contact Us</button>
+                        <button class="questions__button--start not__allowed">Get Starter</button>
+                        <button class="questions__button--contact not__allowed">Contact Us</button>
                     </div>
                 </div>
             </div>
@@ -455,31 +459,31 @@
                 <div class="footer__list--wrapper">
                     <div class="footer__list">
                         <h5 class="footer__list--name">MAIN</h5>
-                        <a class="footer__list--anchor" href="">Blog</a>
-                        <a class="footer__list--anchor" href="">FAQs</a>
-                        <a class="footer__list--anchor" href="">Suport</a>
-                        <a class="footer__list--anchor" href="">About Us</a>
+                        <a class="footer__list--anchor not__allowed" href="">Blog</a>
+                        <a class="footer__list--anchor not__allowed" href="">FAQs</a>
+                        <a class="footer__list--anchor not__allowed" href="">Suport</a>
+                        <a class="footer__list--anchor not__allowed" href="">About Us</a>
                     </div>
                     <div class="footer__list">
                         <h5 class="footer__list--name">PRODUCT</h5>
-                        <a class="footer__list--anchor" href="">Log In</a>
-                        <a class="footer__list--anchor" href="">Personal</a>
-                        <a class="footer__list--anchor" href="">Business</a>
-                        <a class="footer__list--anchor" href="">Team</a>
+                        <a class="footer__list--anchor not__allowed" href="">Log In</a>
+                        <a class="footer__list--anchor not__allowed" href="">Personal</a>
+                        <a class="footer__list--anchor not__allowed" href="">Business</a>
+                        <a class="footer__list--anchor not__allowed" href="">Team</a>
                     </div>
                     <div class="footer__list">
                         <h5 class="footer__list--name">PRESS</h5>
-                        <a class="footer__list--anchor" href="">Logos</a>
-                        <a class="footer__list--anchor" href="">Events</a>
-                        <a class="footer__list--anchor" href="">Stories</a>
-                        <a class="footer__list--anchor" href="">Office</a>
+                        <a class="footer__list--anchor not__allowed" href="">Logos</a>
+                        <a class="footer__list--anchor not__allowed" href="">Events</a>
+                        <a class="footer__list--anchor not__allowed" href="">Stories</a>
+                        <a class="footer__list--anchor not__allowed" href="">Office</a>
                     </div>
                     <div class="footer__list">
                         <h5 class="footer__list--name">TEAM</h5>
-                        <a class="footer__list--anchor" href="">Career</a>
-                        <a class="footer__list--anchor" href="">Founders</a>
-                        <a class="footer__list--anchor" href="">Culture</a>
-                        <a class="footer__list--anchor" href="">Onboarding</a>
+                        <a class="footer__list--anchor not__allowed" href="">Career</a>
+                        <a class="footer__list--anchor not__allowed" href="">Founders</a>
+                        <a class="footer__list--anchor not__allowed" href="">Culture</a>
+                        <a class="footer__list--anchor not__allowed" href="">Onboarding</a>
                     </div>
                     <div class="footer__list">
                         <h5 class="footer__list--name">LEGAL</h5>
@@ -500,9 +504,9 @@
                         &copy; 2023 Treact Inc. All Rights Reserved.
                     </div>
                     <div class="footer__socials">
-                        <a href="https://www.facebook.com"><i class="fab fa-facebook ji"></i></a>
-                        <a href="https://www.twitter.com"><i class="fab fa-twitter"></i></a>
-                        <a href="https://www.youtube.com"><i class="fab fa-youtube"></i></a>
+                        <a class="footer__social--wrapper" href="https://www.facebook.com"><i class="fab fa-facebook footer__icon"></i></a>
+                        <a class="footer__social--wrapper" href="https://www.twitter.com"><i class="fab fa-twitter footer__icon"></i></a>
+                        <a class="footer__social--wrapper" href="https://www.youtube.com"><i class="fab fa-youtube footer__icon"></i></a>
                     </div>
                 </div>
             </div>
