--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </section>
 
     <main>
-      <section id="featres">
+      <section id="features">
         <div class="container">
           <div class="row row__features">
             <div class="features__description--wrapper">
